<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/bottom_menu_home" />

    <item
        android:id="@+id/navigation_review"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/bottom_menu_review" />

    <item
        android:id="@+id/navigation_event"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/bottom_menu_event" />

    <item
        android:id="@+id/navigation_shop"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/bottom_menu_shop" />

    <item
        android:id="@+id/navigation_myblog"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/bottom_menu_myblog" />

</menu>
