<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- 핫플레이스 -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">

        <TextView
            style="@style/main_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/main_hotplace_distance"
            android:text="@string/main_content_menu_hotplace" />

        <TextView
            android:id="@+id/main_hotplace_distance"
            style="@style/main_hotplace"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingRight="10dp"
            android:paddingLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/selector_hotplace_type"
            android:layout_alignParentRight="true"

            android:text="@string/main_content_menu_hotplace_distance"/>

        <TextView
            android:id="@+id/main_hotplace_divid"
            android:paddingVertical="5dp"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="|"
            android:textColor="@color/text_gray_aa"
            android:layout_toLeftOf="@+id/main_hotplace_distance"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/main_hotplace_pop"
            style="@style/main_hotplace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/main_hotplace_divid"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingRight="5dp"
            android:paddingLeft="10dp"
            android:text="@string/main_content_menu_hotplace_pop"
            android:textColor="@color/selector_hotplace_type" />

        <com.skt.tmaphot.activity.main.hotplace.ExpandableHeightGridView
            android:id="@+id/hotplace_gridview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:isScrollContainer="false"
            android:numColumns="2"
            android:layout_below="@+id/main_hotplace_pop"
            android:verticalSpacing="10dp" />

    </RelativeLayout>

</LinearLayout>
