<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <!--android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:theme="@style/BaseToolbar">

        <TextView
            android:id="@+id/main_gps_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/colorWhite" />
    </android.support.v7.widget.Toolbar-->

    <include layout="@layout/base_appbar_layout"/>

    <com.skt.tmaphot.activity.NestedScrollingView
        android:id="@+id/main_nestedscrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:scrollbars="none">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- banner -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="315dp">

                <android.support.v4.view.ViewPager
                    android:id="@+id/viewPager"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <com.skt.tmaphot.activity.main.banner.RollingIndicatorView
                    android:id="@+id/indicator_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@id/main_searchbar"
                    android:layout_centerHorizontal="true" />

                <!-- searchbar -->
                <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/main_searchbar"
                    android:layout_width="@dimen/activity_main_searchbar_width"
                    android:layout_height="@dimen/activity_main_searchbar_height"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    app:cardCornerRadius="3dp"
                    app:cardUseCompatPadding="true">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:background="@color/colorWhite">

                        <ImageView
                            android:id="@+id/main_searchbar_icon"
                            android:layout_width="50.7dp"
                            android:layout_height="match_parent"
                            android:background="@color/text_green_Select"
                            android:scaleType="centerInside"
                            android:src="@drawable/img_main_search"/>

                        <TextView
                            android:layout_marginLeft="3dp"
                            android:layout_toRightOf="@+id/main_searchbar_icon"
                            android:layout_centerVertical="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/main_searchbar"
                            style="@style/main_searchbar"/>

                    </RelativeLayout>
                </android.support.v7.widget.CardView>
            </RelativeLayout>

            <!-- 주변할인 쿠폰-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="15dp">

                <TextView
                    style="@style/main_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/main_txt_coupon_more"
                    android:text="@string/main_content_menu_coupon" />

                <TextView
                    android:id="@+id/main_txt_coupon_more"
                    style="@style/main_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:padding="15dp" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/coupon_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/main_txt_coupon_more" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="9dp"
                android:background="@color/layout_bottom_boder" />

            <!-- 메뉴 -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="15dp"
                android:visibility="visible">

                <TextView
                    android:id="@+id/main_menu_title"
                    style="@style/main_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="@string/main_content_menu_food" />

                <ImageView
                    android:id="@+id/menu_mene_more_img"
                    android:layout_width="21dp"
                    android:layout_height="12dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="15dp"
                    android:src="@drawable/img_main_menu_more" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/menu_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/main_menu_title" />
            </RelativeLayout>

            <!-- 리얼후기 -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="15dp">

                <TextView
                    style="@style/main_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/main_txt_review_more"
                    android:text="@string/main_content_menu_review" />

                <TextView
                    android:id="@+id/main_txt_review_more"
                    style="@style/main_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:padding="15dp" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/review_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/main_txt_review_more" />
            </RelativeLayout>

            <!-- 주변 추천 맛집-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="15dp">

                <TextView
                    style="@style/main_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/main_txt_hotdeal_more"
                    android:text="@string/main_content_menu_hotdeal" />

                <TextView
                    android:id="@+id/main_txt_hotdeal_more"
                    style="@style/main_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:padding="15dp" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/hotdeal_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/main_txt_hotdeal_more" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="9dp"
                android:background="@color/layout_bottom_boder" />

            <!-- 핫플레이스 -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <TextView
                    style="@style/main_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/main_hotplace_distance"
                    android:layout_marginLeft="15dp"
                    android:text="@string/main_content_menu_hotplace" />

                <TextView
                    android:id="@+id/main_hotplace_distance"
                    style="@style/main_hotplace"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:padding="15dp"
                    android:text="@string/main_content_menu_hotplace_distance"
                    android:textColor="@color/selector_hotplace_type" />

                <TextView
                    android:id="@+id/main_hotplace_divid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/main_hotplace_distance"
                    android:paddingBottom="15dp"
                    android:paddingTop="15dp"
                    android:text="|"
                    android:textColor="@color/text_gray_aa"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/main_hotplace_pop"
                    style="@style/main_hotplace"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/main_hotplace_divid"
                    android:padding="15dp"
                    android:text="@string/main_content_menu_hotplace_pop"
                    android:textColor="@color/selector_hotplace_type" />

                <com.skt.tmaphot.activity.main.hotplace.ExpandableHeightGridView
                    android:id="@+id/hotplace_gridview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/main_hotplace_pop"
                    android:layout_marginHorizontal="15dp"
                    android:horizontalSpacing="10dp"
                    android:isScrollContainer="false"
                    android:numColumns="2"
                    android:verticalSpacing="15dp" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="9dp"
                android:background="@color/layout_bottom_boder" />
        </LinearLayout>
    </com.skt.tmaphot.activity.NestedScrollingView>
</LinearLayout>